--- a/entregables/entregables.html
+++ b/entregables/entregables.html
@@ -9,10 +9,16 @@ layout: default
   <p><strong>Entrable</strong></p>
   <p>En esta semana se determinan los roles de los miembros de los equipos</p>
 
+  <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable2.html"> semana 2  | Creacion de pagina web </a></h3>
+  <p><strong>Entrable</strong></p>
+  <p>Analisis de los casos clinicos, identificación del problema y desarrollo del estado del arte</p>
+
+  <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable3.html"> semana 3  | Creacion de pagina web </a></h3>
+  <p><strong>Entrable</strong></p>
+  <p>Desarrollo del estado del arte e identificación de requerimientos</p>
 
 
-
-
+</div>
 
 
 
