--- a/entregables/entregables.html
+++ b/entregables/entregables.html
@@ -6,15 +6,15 @@ layout: default
   <h1 align="justify">Entregables Semanales</h1>
 
   <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable1.html"> semana 1  | Creación de pagina web </a></h3>
-  <p><strong>Entrable</strong></p>
+  <p><strong>Entregable</strong></p>
   <p>En esta semana se determinan los roles de los miembros de los equipos</p>
 
   <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable2.html"> semana 2  | Contexto social y económico </a></h3>
-  <p><strong>Entrable</strong></p>
+  <p><strong>Entregable</strong></p>
   <p>Análisis de los casos clínicos, identificación del problema y desarrollo del estado del arte</p>
 
   <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable3.html"> semana 3  | Estado del arte </a></h3>
-  <p><strong>Entrable</strong></p>
+  <p><strong>Entregable</strong></p>
   <p>Desarrollo del estado del arte e identificación de requerimientos</p>
 
 
