--- a/entregables/entregables.html
+++ b/entregables/entregables.html
@@ -1,9 +1,10 @@
-
+---
 layout: default
-
+---
 <div class="blurb">
+  
+ <h1 align="center">Entregables Semanales</h1>
 
-  <h1 align="justify">Entregables Semanales</h1>
 
   <h3><a href="https://grupo-3-biodesign.github.io/entregables/entregable1.html"> semana 1  | Creación de pagina web </a></h3>
   <p><strong>Entregable</strong></p>
