--- a/miembros/miembros.html
+++ b/miembros/miembros.html
@@ -1,9 +1,9 @@
-
-layout: miembros
-
-
-
-
+---
+layout: default
+---
+<div class="blurb">
+ <h1 align="center">Miembros</h1>
+  
 *Luis André Granados Fajardo*
 
 
